Fix bottom padding of items in page indexes
When a summary is present, the margin was overlapping the header
element, leading to an empty white area appearing at the bottom of the
listing item.

--- a/_src/sass/components/_listing.scss
+++ b/_src/sass/components/_listing.scss
@@ -41,7 +41,8 @@
     }
 
     /* No icon for illustrated articles in full-size listings. */
-    &.post-illustrated:before {
+    &.post-illustrated:before,
+    &.page:before {
         display: none;
     }
 
@@ -96,6 +97,18 @@
 /*
  * Blog/index listing.
  */
+
+/* Bottom spacing for footer-less illustrated items. */
+.page-illustrated .index-listing-header {
+    padding-bottom: $line;
+
+    .title-summary {
+        margin-bottom: 0;
+    }
+
+}
+
+/* Content area. */
 .index-listing-content {
     @include rem("padding-bottom", $line);
     font-family: $font-family-content;
